syntax = "proto3";
package basicService.api.v1;

option go_package = "basicService/api/basicService/v1;v1";

import "basicService/v1/common.proto";

message CreateVerificationCodeRequest {
    // 验证码的位数
    int64 bits = 1;
    // 过期时间戳，毫秒
    int64 expire_time = 2;
}

message CreateVerificationCodeResponse {
    Metadata meta = 1;
    int64 verification_code_id = 2;
}

message ValidateVerificationCodeRequest {
    int64 verification_code_id = 1;
    string code = 2;
}

message ValidateVerificationCodeResponse {
    Metadata meta = 1;
}

service AuthService {
  rpc CreateVerificationCode(CreateVerificationCodeRequest) returns (CreateVerificationCodeResponse);
  rpc ValidateVerificationCode(ValidateVerificationCodeRequest) returns (ValidateVerificationCodeResponse);
}
